[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/Screen.tres" type="Theme" id=1]
[ext_resource path="res://src/screen/windows/NumLock.gd" type="Script" id=2]

[node name="NumLock" type="VBoxContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 118.0
margin_bottom = 166.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 80.0
margin_bottom = 41.0
text = "LOCK PAD"
align = 1
autowrap = true

[node name="Panel" type="Panel" parent="."]
margin_top = 45.0
margin_right = 80.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 20 )
text = "0000"
align = 1
valign = 2

[node name="Numpad" type="GridContainer" parent="."]
margin_top = 69.0
margin_right = 80.0
margin_bottom = 177.0
columns = 3

[node name="1" type="Button" parent="Numpad"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
text = "1"

[node name="2" type="Button" parent="Numpad"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
text = "2"

[node name="3" type="Button" parent="Numpad"]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
text = "3"

[node name="4" type="Button" parent="Numpad"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0
rect_min_size = Vector2( 24, 24 )
text = "4"

[node name="5" type="Button" parent="Numpad"]
margin_left = 28.0
margin_top = 28.0
margin_right = 52.0
margin_bottom = 52.0
rect_min_size = Vector2( 24, 24 )
text = "5"

[node name="6" type="Button" parent="Numpad"]
margin_left = 56.0
margin_top = 28.0
margin_right = 80.0
margin_bottom = 52.0
rect_min_size = Vector2( 24, 24 )
text = "6"

[node name="7" type="Button" parent="Numpad"]
margin_top = 56.0
margin_right = 24.0
margin_bottom = 80.0
rect_min_size = Vector2( 24, 24 )
text = "7"

[node name="8" type="Button" parent="Numpad"]
margin_left = 28.0
margin_top = 56.0
margin_right = 52.0
margin_bottom = 80.0
rect_min_size = Vector2( 24, 24 )
text = "8"

[node name="9" type="Button" parent="Numpad"]
margin_left = 56.0
margin_top = 56.0
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 24, 24 )
text = "9"

[node name="Clear" type="Button" parent="Numpad"]
self_modulate = Color( 8, 0, 0, 1 )
margin_top = 84.0
margin_right = 24.0
margin_bottom = 108.0
rect_min_size = Vector2( 24, 24 )
text = "C"

[node name="0" type="Button" parent="Numpad"]
margin_left = 28.0
margin_top = 84.0
margin_right = 52.0
margin_bottom = 108.0
rect_min_size = Vector2( 24, 24 )
text = "0"

[node name="Enter" type="Button" parent="Numpad"]
self_modulate = Color( 0.219608, 1, 0, 1 )
margin_left = 56.0
margin_top = 84.0
margin_right = 80.0
margin_bottom = 108.0
rect_min_size = Vector2( 24, 24 )
text = "="

[connection signal="pressed" from="Numpad/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="Numpad/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Numpad/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Numpad/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="Numpad/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="Numpad/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="Numpad/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="Numpad/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="Numpad/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="Numpad/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="Numpad/0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="Numpad/Enter" to="." method="_on_Enter_pressed"]
